--- a/pattern/modules/ROOT/pages/behavioral/index.adoc
+++ b/pattern/modules/ROOT/pages/behavioral/index.adoc
@@ -3,4 +3,4 @@
 Behavioral Pattern (dt. Verhaltensmuster) sind Entwurfsmuster, welche
 das Verhalten der Software abbilden. 
 
-* link:memento/main.adoc[Memento]
+* link:memento/[Memento]
