--- a/pattern/modules/ROOT/pages/behavioral/memento/index.adoc
+++ b/pattern/modules/ROOT/pages/behavioral/memento/index.adoc
@@ -24,7 +24,7 @@
 .main.cpp
 [source,c++]
 ----
-include::$behavioral/memento/src/main.cpp[]
+include::pages$behavioral/memento/src/main.cpp[]
 ----
 
 .Output
