--- a/pattern/structural/decorator/index.adoc
+++ b/pattern/structural/decorator/index.adoc
@@ -6,19 +6,19 @@
 .component.hpp
 [source,c++]
 ----
-
+include::src/component.hpp[]
 ----
 
 .decorator.hpp
 [source,c++]
 ----
-
+include::src/decorator.hpp[]
 ----
 
 .main.cpp
 [source,c++]
 ----
-
+include::src/main.cpp[]
 ----
 
 .Output
