--- a/pattern/behavioral/memento/index.adoc
+++ b/pattern/behavioral/memento/index.adoc
@@ -6,25 +6,25 @@
 .state.hpp
 [source,c++]
 ----
-
+include::src/state.hpp[]
 ----
 
 .memento.hpp
 [source,c++]
 ----
-
+include::src/memento.hpp[]
 ----
 
 .originator.hpp
 [source,c++]
 ----
-
+include::src/originator.hpp[]
 ----
 
 .main.cpp
 [source,c++]
 ----
-include::mapper:ROOT:pages$behavioral/memento/src/main.cpp[]
+include::src/main.cpp[]
 ----
 
 .Output
