--- a/pattern/creational/index.adoc
+++ b/pattern/creational/index.adoc
@@ -2,3 +2,4 @@
 
 * link:abstract_factory/index.adoc[Abstract Factory]
 * link:builder/index.adoc[Builder]
+* link:factory_method/index.adoc[Factory Method]
