--- a/pattern/creational/index.adoc
+++ b/pattern/creational/index.adoc
@@ -3,3 +3,4 @@
 * link:abstract_factory/index.adoc[Abstract Factory]
 * link:builder/index.adoc[Builder]
 * link:factory_method/index.adoc[Factory Method]
+* link:singleton/index.adoc[Singleton]
